Web App now displays the profile picture

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@
                 data: $('#name-form').serialize(),
                 type: 'POST',
                 success: function (response) {
-                    $('#profile-pic').attr('src', response.picture_url); // Update the profile picture src attribute
+                    $('#profile-pic').attr('src', response.profile_pic_url); // Update the profile picture src attribute
                     $('#profile-pic').show(); // Show the profile picture
                     $('#summary-and-facts').text(response.summary);
                     $('#interests').html('<ul>' + response.facts.map(fact => '<li>' + fact + '</li>').join('') + '</ul>');
                     $('#ice-breakers').html('<ul>' + response.ice_breakers.map(ice_breaker => '<li>' + ice_breaker + '</li>').join('') + '</ul>');
-                    $('#topics-of-interest').html('<ul>' + response.interests.map(topic => '<li>' + topic + '</li>').join('') + '</ul>');
+                    $('#topics-of-interest').html('<ul>' + response.topics_of_interest.map(topic => '<li>' + topic + '</li>').join('') + '</ul>');
                 },
                 error: function (error) {
                     console.log(error);
